# tunescope

./: CMakeLists.txt  README.md
cmake/Modules/: FindJack.cmake
include/: audio.h  gui.h  tone.h
src/: audio.cpp  gui.cpp  main.cpp  tone.cpp
